Fixed vertical align for search div

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -95,9 +95,8 @@ a:hover{
     text-align: center;
     box-shadow: 0 0px 5px #52b69a, 0 5px 50px #52b69a;
     backdrop-filter: blur(5px);
-    position: relative;
-    left: 5%;
-    bottom: 70%;
+    vertical-align: top;
+    margin-left: 5%;
 }
 
 .buttons
